--- a/view.html
+++ b/view.html
@@ -222,7 +222,7 @@
 			<ul class="general-list item-{{(betMaxLose * 5) + 10}}" ng-style="{'height': (betMaxLose * 5) + 10}">
 				<li class="general-item lose-item" ng-style="{'height': (betMaxLose * 5)}"><span>{{betMaxLose}}</span></li>
 				<li ng-repeat="item in generalList" class="general-item {{item.style}}" ng-style="{'height': (item.value * 5)}">
-					<span>{{item.value}}</span>
+					<span class="{{item-style}}">{{item.value}}</span>
 				</li>
 			</ul>
 		</div>
